Fix distance measure
Fiexed distance not showing correctly after switch map styles

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     
     .distance-container > * {
         background-color: rgba(0, 0, 0, 0.5);
-        color: #fff; 
+        color: #FFFFFF; 
         font-size: 12px;
         font-family: verdana;
         font-weight: bold;
